<resources>
    <string name="app_name">My Champp</string>
    <string name="welcome">Welcome to the Champ Manager App!</string>
    <string name="new_champ">New Championship</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_champ">New Championship</string>
    <string name="name">Name: </string>
    <string name="modal">Modal: </string>
    <string name="champ_individual">Individual</string>
    <string name="champ_group">Group</string>
    <string name="champ_cup">Cup</string>
    <string name="champ_league">League</string>
    <string name="ok">Ok</string>
    <string name="participant_empty_name">Participant Empty Name </string>
    <string name="integrant_empty_name">Integrant Empty Name </string>
    <string name="type_modality">Type of the Modality:</string>
    <string name="type_of_competition">Type of Competition:</string>
    <string name="title_activity_champ_characteristics">Champ Characteristics</string>
    <string name="no_champs">No championships</string>
    <string name="same_champ">Championship with same name already exists</string>
    <string name="champ_deleted">Successfully Deleted Championship</string>
    <string name="participant_deleted">Successfully Deleted Participant</string>
    <string name="field_empty">Complete all fields</string>
    <string name="delete_button">Delete</string>
    <string name="title_activity_add_participant">Add Participant</string>
    <string name="cancel">Cancel</string>
    <string name="delete_champs_dialog">Are you sure you want to delete this championship?</string>
    <string name="delete_participant_dialog">Are you sure want to delete the participant?</string>
    <string name="delete_integrant_dialog">Are you sure want to delete the participant integrant?</string>
    <string name="title_activity_participant_characteristcs">Participant Characteristcs</string>
    <string name="name_participant" />
    <string name="init_champ">Start Championship</string>
    <string name="title_activity_championship">ChampionshipActivity</string>
    <string name="show_table">Show Table</string>
    <string name="title_activity_cup">Cup</string>
    <string name="title_activity_league">League</string>
    <string name="champ_started">The Championship has started</string>
    <string name="participant_created">Participant Created</string>
    <string name="integrant_created">Integrant Created</string>
    <string name="same_name">There is already a participant of the same name</string>
    <string name="champ_unstarted">Add at least 2 participants</string>
    <string name="table">Table</string>
    <string name="title_activity_add_integrant">Add Integrant</string>
    <string name="set_score_dialog">Are you sure want to change the score? You can no longer change it.</string>
    <string name="set_score_dialog_title">Change Score</string>
    <string name="title_activity_campeao">Champion</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_logo">logoActivity</string>
    <string name="title_activity_modal">Modalities</string>
    <string name="select_modal_tv">Select The Championship Modality</string>
    <string name="basketball">Basketball</string>
    <string name="football">Football</string>
    <string name="futsal">Futsal</string>
    <string name="handball">Handball</string>
    <string name="tennis">Tennis</string>
    <string name="volley">Volleyball</string>
    <string name="congrat">Congratulations </string>
    <string name="you_win"> You are the new champion of </string>
    <string name="invalid_field">Enter valid values in the result fields</string>
    <string name="char_exceeded">Character Limit Exceeded</string>
    <string name="champion">CHAMPION!</string>
    <string name="title_activity_settings_champ">Settings Champ</string>
    <string name="league_settings_tv">Choose the type of league</string>
    <string name="champ_round_robin">Round-Robin</string>
    <string name="champ_double_round_robin">Double Round-Robin</string>
    <string name="select_competition">Select one of the options</string>
    <string name="champ_empty_name">Championship Empty Name</string>
    <string name="cup_settings_tv">Choose tiebreaker</string>
    <string name="cup_penalities">Add Tiebreaker Result</string>
    <string name="cup_home_win">Home Win</string>
    <string name="show_ranking">Show Ranking</string>
    <string name="points_tv">| P </string>
    <string name="games_tv">| G </string>
    <string name="wins_tv">| W </string>
    <string name="losses_tv">| L </string>
    <string name="draw_tv">| D </string>
    <string name="gols_for_tv">| F </string>
    <string name="gols_against_tv">| A </string>
    <string name="balance_tv">| B </string>

    <string name="sure_start_champ">Are You sure to start this Championship?</string>
    <string name="participants_tv">Participants</string>
    <string name="integrants_tv">Integrants</string>
    <string name="no_integrants_tv">No Integrants</string>
    <string name="p_toast">Points</string>
    <string name="g_toast">Games</string>
    <string name="w_toast">Wins</string>
    <string name="l_toast">Losses</string>
    <string name="d_toast">Draws</string>
    <string name="f_toast">(Goals, Sets, ...) For</string>
    <string name="a_toast">(Goals, Sets, ...) Against</string>
    <string name="b_toast">Balance</string>

    <string name="champ_list">Championship List</string>


</resources>
